update swagger & update 'general' endpoint
