# burrito/apps/statistic/docs/swagger.json
@@ -7,7 +7,41 @@
         "version": "1.0"
     },
     "paths": {
-        "/statistic/general": {
+        "/statistic/activity_summary": {
+            "get": {
+                "description": "get period statistic",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "get period statistic",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ActivitySummaryModel"
+                        }
+                    }
+                }
+            }
+        },
+        "/statistic/faculty": {
+            "get": {
+                "description": "get faculty statistic",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "get faculty statistic",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.FacultyStatisticModel"
+                        }
+                    }
+                }
+            }
+        },
+        "/statistic/period": {
             "post": {
                 "description": "get general statistic",
                 "consumes": [
@@ -19,12 +53,12 @@
                 "summary": "get general statistic",
                 "parameters": [
                     {
-                        "description": "GeneralStatisticRequest",
+                        "description": "PeriodStatisticRequest",
                         "name": "payload",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.GeneralStatisticRequest"
+                            "$ref": "#/definitions/models.PeriodStatisticRequest"
                         }
                     }
                 ],
@@ -32,7 +66,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.GeneralStatisticModel"
+                            "$ref": "#/definitions/models.PeriodStatisticModel"
                         }
                     }
                 }
@@ -40,24 +74,69 @@
         }
     },
     "definitions": {
-        "models.GeneralStatisticModel": {
+        "models.ActivitySummaryModel": {
             "type": "object",
             "properties": {
-                "global": {
-                    "type": "object",
-                    "properties": {
-                        "statuses": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.TicketStatusCount"
+                "average_process_time": {
+                    "type": "number"
+                },
+                "tickets_processed": {
+                    "type": "integer"
+                },
+                "users_registered": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.FacultyData": {
+            "type": "object",
+            "properties": {
+                "created_tickets_percent": {
+                    "type": "number"
+                },
+                "faculty_id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "registered_users": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.FacultyStatisticModel": {
+            "type": "object",
+            "properties": {
+                "faculties_data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.FacultyData"
+                    }
+                }
+            }
+        },
+        "models.PeriodStatisticModel": {
+            "type": "object",
+            "properties": {
+                "scopes": {
+                    "type": "array",
+                    "items": {
+                        "type": "object",
+                        "properties": {
+                            "date": {
+                                "type": "string"
+                            },
+                            "scope": {
+                                "type": "integer"
+                            },
+                            "tickets_count": {
+                                "type": "integer"
                             }
-                        },
-                        "tickets_count": {
-                            "type": "integer"
                         }
                     }
                 },
-                "period": {
+                "statuses": {
                     "type": "array",
                     "items": {
                         "type": "object",
@@ -68,6 +147,9 @@
                             "status_id": {
                                 "type": "integer"
                             },
+                            "status_name": {
+                                "type": "string"
+                            },
                             "tickets_count": {
                                 "type": "integer"
                             }
@@ -76,7 +158,7 @@
                 }
             }
         },
-        "models.GeneralStatisticRequest": {
+        "models.PeriodStatisticRequest": {
             "type": "object",
             "properties": {
                 "from": {
@@ -84,17 +166,6 @@
                 },
                 "to": {
                     "type": "string"
-                }
-            }
-        },
-        "models.TicketStatusCount": {
-            "type": "object",
-            "properties": {
-                "count": {
-                    "type": "integer"
-                },
-                "status_id": {
-                    "type": "integer"
                 }
             }
         }
