# burrito/apps/statistic/models/requests_model.go
@@ -1,6 +1,0 @@
-package models
-
-type GeneralStatisticRequest struct {
-	From string `json:"from"`
-	To   string `json:"to"`
-}
